Added benchmarking code and debug printf toggle
500000 reqs/sec! not bad linux, not bad at all.

--- a/twonode/Makefile
+++ b/twonode/Makefile
@@ -1,2 +1,11 @@
+#DEBUG=-DDEBUG -g -ggdb
+
+LIBS=-lpthread
+CFLAGS=-Wall -O2
+
 node: node.h node.c
-	gcc -o node node.c -lpthread -g -ggdb -Wall # -std=c99
+	gcc -o node node.c ${LIBS} ${CFLAGS} ${DEBUG}
+
+clean:
+	rm -f node
+
