Update makefile a bit to use pkg-config

--- a/twonode/Makefile
+++ b/twonode/Makefile
@@ -1,8 +1,8 @@
 DEBUG=-DDEBUG -g -ggdb
 
 CC=gcc
-LIBS=-lpthread -lconfig -L/usr/lib
-CFLAGS=-Wall -O2
+LIBS=-lpthread `pkg-config --libs libconfig`
+CFLAGS=-Wall -O2 `pkg-config --cflags libconfig`
 
 node: node.h node.c
 	${CC} -o node node.c ${LIBS} ${CFLAGS} ${DEBUG}
