Split into different files, was getting unmanageable

--- a/twonode/Makefile
+++ b/twonode/Makefile
@@ -4,9 +4,18 @@ CC=gcc
 LIBS=-lpthread `pkg-config --libs libconfig`
 CFLAGS=-Wall -O2 `pkg-config --cflags libconfig`
 
-node: node.h node.c
-	${CC} -o node node.c ${LIBS} ${CFLAGS} ${DEBUG}
+node: node.h server.o client.o util.o
+	${CC} -o node server.o client.o util.o ${LIBS} ${CFLAGS} ${DEBUG}
+
+server.o: server.c node.h
+	${CC} -c -o server.o server.c ${CFLAGS} ${DEBUG}
+
+client.o: client.c node.h
+	${CC} -c -o client.o client.c ${CFLAGS} ${DEBUG}
+
+util.o: util.c node.h
+	${CC} -c -o util.o util.c ${CFLAGS} ${DEBUG}
+
 
 clean:
-	rm -f node
-
+	rm -f node server.o client.o util.o
