--- a/twonode/Makefile
+++ b/twonode/Makefile
@@ -1,20 +1,21 @@
 DEBUG=-DDEBUG -g -ggdb
+#OPTS=-O2
 
 CC=gcc
 LIBS=-lpthread `pkg-config --libs libconfig zlib`
-CFLAGS=-Wall -O2 `pkg-config --cflags libconfig zlib`
+CFLAGS=${OPTS} ${DEBUG} -Wall `pkg-config --cflags libconfig zlib`
 
 node: server.o client.o util.o
-	${CC} -o node server.o client.o util.o ${LIBS} ${CFLAGS} ${DEBUG}
+	${CC} -o node server.o client.o util.o ${LIBS} ${CFLAGS}
 
 server.o: server.c node.h
-	${CC} -c -o server.o server.c ${CFLAGS} ${DEBUG}
+	${CC} -c -o server.o server.c ${CFLAGS}
 
 client.o: client.c node.h
-	${CC} -c -o client.o client.c ${CFLAGS} ${DEBUG}
+	${CC} -c -o client.o client.c ${CFLAGS}
 
 util.o: util.c node.h
-	${CC} -c -o util.o util.c ${CFLAGS} ${DEBUG}
+	${CC} -c -o util.o util.c ${CFLAGS}
 
 
 clean:
